mlflow-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server
  labels:
    app: mlflow
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
      - name: mlflow
        image: ghcr.io/mlflow/mlflow:v2.13.0
        command:
          - mlflow
          - server
          - --host=0.0.0.0
          - --port=5000
          - --backend-store-uri=sqlite:////mlflow-data/mlflow.db
          - --default-artifact-root=s3://raghunath2604-mlops-dvc-data/mlflow/
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: mlflow-storage
          mountPath: /mlflow-data
      volumes:
      - name: mlflow-storage
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
spec:
  selector:
    app: mlflow
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
