service.yml
apiVersion: v1
kind: Service
metadata:
  name: mlops
  labels:
    app: mlops
spec:
  selector:
    app: mlops
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8005
  type: ClusterIP
